--- a/src/index.css
+++ b/src/index.css
@@ -89,17 +89,46 @@ select {
   padding: 2rem;
 }
 
-.footer-copyright {
-  -ms-flex-item-align: center;
-  -ms-grid-row-align: center;
-  align-self: center;
-  text-align: center;
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
 * > h1 {
   font-family: 'Bangers', cursive !important;
   font-size: 10rem !important;
 }
+
+#sidebar > div {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid #e3e3e3;
+}
+
+#sidebar nav {
+  flex: 1;
+  overflow: auto;
+  padding-top: 1rem;
+}
+
+#sidebar nav a {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  overflow: hidden;
+  white-space: pre;
+  padding: 0.5rem;
+  border-radius: 8px;
+  color: inherit;
+  text-decoration: none;
+  gap: 1rem;
+}
+
+#sidebar nav a:hover {
+  background: #e3e3e3;
+}
+
+#sidebar nav a.active {
+  background: hsl(224, 66%, 74%);
+  color: white;
+}
+
 
