--- a/src/index.css
+++ b/src/index.css
@@ -100,66 +100,46 @@ select {
 
 .container-flex {
   display: flex;
+  flex-direction: column;
   gap: 10rem;
 }
 
 .sidebar {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 1rem;
   position: relative;
   overflow: hidden;
   max-width: 100%;
-  margin-top: 10rem;
-  padding: 5rem;
-  border-radius: 40px;
-  box-shadow: 0 10px 40px rgba(159, 162, 177, .8);
+  margin-top: 1rem;
+  padding: .5rem;
+  border-radius: 5rem;
+  box-shadow: 0 1rem 40px #9fcddb;
 }
 
 .nav-item {
-  padding: 20px;
+  padding: 1rem;
   text-decoration: none;
   transition: .3s;
-  margin: 0 6px;
+  margin: 0 1rem;
   z-index: 1;
-  font-family: 'DM Sans', sans-serif;
-  font-weight: 500;
   position: relative;
-  
-  &:before {
-    content: "";
-    position: absolute;
-    bottom: -6px;
-    left: 0;
-    width: 100%;
-    height: 5px;
-    background-color: #dfe2ea;
-    border-radius: 8px 8px 0 0;
-    opacity: 0;
-    transition: .3s;
-  }
 }
 
-.nav-item:not(.is-active):hover { color: var(--main-pink); }
-
-.nav-indicator {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  height: 4px;
-  transition: .4s;
-  height: 5px;
-  z-index: 1;
-  border-radius: 8px 8px 0 0;
+.nav-item:hover { 
+  color: var(--main-pink); 
+  outline: 1px solid var(--main-pink);
+  border-radius: 1.5rem;
 }
 
-@media (max-width: 580px) {
-  .nav { overflow: auto; }
+.container-carousel-flex {
+  display: flex;
+  gap: 10rem;
 }
 
 .slide-show {
-  width: 80em;
-  height: 100em;
+  width: 60em;
+  height: 80em;
+  border-radius: 1rem;
 }
