--- a/src/index.css
+++ b/src/index.css
@@ -121,7 +121,6 @@ select {
 .nav-item {
   padding: 1rem;
   text-decoration: none;
-  transition: .3s;
   margin: 0 1rem;
   z-index: 1;
   position: relative;
@@ -143,3 +142,17 @@ select {
   height: 80em;
   border-radius: 1rem;
 }
+
+.padding-table {
+  padding-top: 3rem;
+}
+
+.label-search-field {
+  color: var(--main-turquoise) !important;
+}
+
+.centered-text {
+  text-align: center;
+  padding-top: 2rem;
+}
+
