--- a/src/index.css
+++ b/src/index.css
@@ -93,6 +93,7 @@ select {
 
 .container-styles {
   padding: 2rem;
+  width: 100%;
 }
 
 * > h1 {
@@ -140,12 +141,6 @@ select {
   color: var(--main-pink);
   outline: 1px solid var(--main-pink);
   border-radius: 1.5rem;
-}
-
-.swiper {
-  width: 60em;
-  height: 80em;
-  border-radius: 1rem;
 }
 
 .padding-table {
