--- a/src/index.css
+++ b/src/index.css
@@ -92,7 +92,7 @@ select {
 }
 
 .container-styles {
-  padding: 2rem;
+  padding: 0 2rem;
   width: 100%;
 }
 
@@ -126,13 +126,13 @@ select {
   margin-top: 1rem;
   padding: 0.5rem;
   border-radius: 5rem;
-  box-shadow: 0 1rem 40px #9fcddb;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1), 0px 2px 4px rgba(0, 0, 0, 0.1),
+    0px 4px 8px rgba(0, 0, 0, 0.1), 0px 8px 16px rgba(0, 0, 0, 0.1);
 }
 
 .nav-item {
   padding: 1rem;
   text-decoration: none;
-  margin: 0 1rem;
   z-index: 1;
   position: relative;
 }
