--- a/src/index.css
+++ b/src/index.css
@@ -39,11 +39,6 @@ body {
   line-height: 1.5;
 }
 
-/* A elements that don't have a class get default styles */
-a:not([class]) {
-  text-decoration-skip-ink: auto;
-}
-
 /* Make images easier to work with */
 img,
 picture {
@@ -100,13 +95,12 @@ body {
 }
 
 .container-styles {
-  padding: 0 2rem;
   width: 100%;
 }
 
 * > h1 {
   font-family: "Bangers", cursive !important;
-  font-size: 10rem !important;
+  font-size: 8rem !important;
   text-align: center;
 }
 
@@ -129,48 +123,22 @@ body {
   align-items: center;
   gap: 1rem;
   max-width: 100%;
-  margin-top: 1rem;
-  padding: 0.5rem;
+  margin-top: 0.5rem;
+  position: sticky;
+  top: 0;
+  width: 100%;
+  z-index: 1;
+  background-color: #3a0ca3;
   border-radius: 5rem;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1), 0px 2px 4px rgba(0, 0, 0, 0.1),
     0px 4px 8px rgba(0, 0, 0, 0.1), 0px 8px 16px rgba(0, 0, 0, 0.1);
-}
-
-@media only screen and (max-width: 600px) {
-  .sidebar {
-    position: fixed;
-    top: 0;
-    width: 90%;
-    z-index: 1;
-    background-color: #3a0ca3;
-  }
-
-  .container-styles {
-    z-index: 0;
-  }
-
-  .sidebar:hover {
-    background-color: var(--main-turquoise);
-  }
-
-  .nav-item {
-    color: var(--main-turquoise);
-  }
-
-  .nav-item:hover {
-    outline: 1px solid var(--main-pink);
-    border-radius: 1.5rem;
-  }
-
-  #detail {
-    padding-top: 7rem;
-  }
 }
 
 .nav-item {
   padding: 1rem;
   text-decoration: none;
   border-radius: 1.5rem;
+  color: var(--main-turquoise);
 }
 
 .nav-item:hover {
@@ -179,7 +147,7 @@ body {
 }
 
 .padding-table {
-  padding-top: 3rem;
+  padding-top: 0.6rem;
 }
 
 .label-search-field {
